traefik/Dashboard/traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress
  namespace: default
spec:
  entryPoints:
    - web 
  routes:
    - match: Host(`dash.wastedbits.org`)
      kind: Rule
      services:
        - name: traefik-dashboard 
          port: 8080
      middlewares:
        - name: traefik-https-redirect
